fixed gradient to stretch

--- a/pages/mainStyle.css
+++ b/pages/mainStyle.css
@@ -1,8 +1,12 @@
 body{
-    background-image: url(./Ambient-Vignette-Background-Blue-Yellow.jpg);
+    background-image: url(./Ambient-Vignette-Background-Blue-Yellow.jpg); 
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: right top;
     background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     
 }
 
